@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.849 2003/03/18 00:38:57 jonnymind Exp $
+ * $Id: ChangeLog,v 1.852 2003/03/18 15:02:34 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+
+2003-03-18 21:32 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/rtl/regex.c
+    ! HB_RegexSplit(), in case that the split token is not present
+      in the string, returns an array of one item (the whole string).
+
+  * tests/regex.prg
+    + Added a test to demonstrate this feature.
 
 
 2003-03-18 16:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
@@ -72,8 +81,8 @@
   * source/vm/inet.c
     ! Fixed async socket closing under linux. Now closing socket with InetClose
       will make also select() to return, and so functions waiting forever (as
-      accept) will cleanly return. 
-    
+      accept) will cleanly return.
+
 2003-03-17 12:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/win32ole.prg
     ! Fixed GPF when passing an OLE Object as paramater to an OLE Method.
